RESOLVED FIXED164379
Fixes to build JSCOnly on macOS
https://bugs.webkit.org/show_bug.cgi?id=164379
Summary Fixes to build JSCOnly on macOS
Konstantin Tokarev
Reported 2016-11-03 15:09:06 PDT
1. Don't define PLATFORM(MAC) or WIN for JSCOnly 2. Use system ICU libraries on Mac 3. Fixed WEBKIT_FRAMEWORK macro for static JSC
Attachments
Patch (4.99 KB, patch)
2016-11-03 15:13 PDT, Konstantin Tokarev
no flags
Konstantin Tokarev
Comment 1 2016-11-03 15:13:50 PDT
WebKit Commit Bot
Comment 2 2016-11-03 16:52:42 PDT
Comment on attachment 293811 [details] Patch Clearing flags on attachment: 293811 Committed r208357: <http://trac.webkit.org/changeset/208357>
WebKit Commit Bot
Comment 3 2016-11-03 16:52:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.