Fixes to build JSCOnly on macOS https://bugs.webkit.org/show_bug.cgi?id=164379

Reviewed by Michael Catanzaro.

.:

* Source/cmake/OptionsJSCOnly.cmake: Define BUILDING_JSCONLY__, use
system ICU libraries on macOS
* Source/cmake/WebKitMacros.cmake: Fixed WEBKIT_FRAMEWORK macro for
static JSC

Source/WTF:

* wtf/Platform.h: JSCOnly port should not provide any PLATFORM() macro

Tools:

* TestWebKitAPI/PlatformJSCOnly.cmake: Moved BUILDING_JSCONLY__
definition to OptionsJSCOnly.cmake


Canonical link: https://commits.webkit.org/182104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208357 268f45cc-cd09-0410-ab3c-d52691b4dbfc