Source/cmake/OptionsJSCOnly.cmake
@@ -1,5 +1,6 @@
-find_package(ICU REQUIRED)
 find_package(Threads REQUIRED)
+
+add_definitions(-DBUILDING_JSCONLY__)
 
 set(PROJECT_VERSION_MAJOR 1)
 set(PROJECT_VERSION_MINOR 0)
@@ -42,6 +43,17 @@ if (LOWERCASE_EVENT_LOOP_TYPE STREQUAL "glib")
 else ()
     SET_AND_EXPOSE_TO_BUILD(USE_GENERIC_EVENT_LOOP 1)
     SET_AND_EXPOSE_TO_BUILD(WTF_DEFAULT_EVENT_LOOP 0)
+endif ()
+
+if (NOT APPLE)
+    find_package(ICU REQUIRED)
+else ()
+    set(ICU_INCLUDE_DIRS
+        "${WEBCORE_DIR}/icu"
+        "${JAVASCRIPTCORE_DIR}/icu"
+        "${WTF_DIR}/icu"
+    )
+    set(ICU_LIBRARIES libicucore.dylib)
 endif ()
 
 # From OptionsGTK.cmake
