Tools/TestWebKitAPI/PlatformJSCOnly.cmake
@@ -1,11 +1,6 @@
 set(TESTWEBKITAPI_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TestWebKitAPI")
 set(TESTWEBKITAPI_RUNTIME_OUTPUT_DIRECTORY_WTF "${TESTWEBKITAPI_RUNTIME_OUTPUT_DIRECTORY}/WTF")
 
-# This is necessary because JSCOnly port does not support WebCore, WebKit and WebKit2.
-# To build TestWTF, we need this flag not to include WebKit related headers except
-# for WTF and JavaScriptCore.
-add_definitions(-DBUILDING_JSCONLY__)
-
 include_directories(
     ${DERIVED_SOURCES_DIR}/ForwardingHeaders
     "${WTF_DIR}/icu"
